# gameboy

./: .gitignore  Cargo.toml  README.md  WASM_PORTING_GUIDE.md
.github/workflows/: deploy.yml
core/: Cargo.toml
core/src/: address_bus.rs  battery_save.rs  bootrom.rs  cartridge.rs  cpu.rs  game_boy.rs  game_pak.rs  joypad.rs  lib.rs  mbc.rs
core/src/cpu/: condition.rs  execute.rs  registers.rs
core/src/mbc/: mbc_0.rs  mbc_1.rs  mbc_3.rs
core/src/ppu/: control.rs  status.rs
native/: Cargo.toml
native/src/: file_battery_save.rs  file_game_pak.rs  main.rs
src/: address_bus.rs  apu.rs  bootrom.rs  cartridge.rs  cpu.rs  flags_register.rs  frame_buffer.rs  game_boy.rs  instruction.rs  joypad.rs  lib.rs  main.rs  mbc.rs  memory_bus.rs  ppu.rs  registers.rs  timer.rs  wasm.rs
src/cpu/: decode.rs  execute.rs  flags_register.rs  interrupt_master_enable.rs  read_write.rs  registers.rs
src/mbc/: mbc_0.rs  mbc_1.rs  mbc_3.rs
src/ppu/: control.rs  mode.rs  sprite.rs
web/: Cargo.toml  buttons.css  index.html  index.js  main.js  menu.css  style.css
web/components/: App.js  Menu.js  RomDropZone.js  Screen.js
web/src/: lib.rs  local_storage_battery_save.rs  uploaded_game_pak.rs
